# SWNS

./: CMakeLists.txt  README.md  install.sh
.qt_for_python/uic/: about.py  help.py  mainwindow.py
Projects/中子打铍/: Mytest.root  SWNSgeom.txt  physiclists.txt  run.mac
code_gui/: CMakeLists.txt  README.md  SWNS.cc
code_gui/.qt_for_python/uic/: about.py  help.py  mainwindow.py
code_gui/gui/: CMakeLists.txt  Guitest.sh  about.cpp  about.h  about.ui  appicon.aps  appicon.rc  help.cpp  help.h  help.ui  images.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
code_gui/gui/images/: logo.psd
code_gui/include/: SWNSActionInitialization.hh  SWNSDetectorConstruction.hh  SWNSPrimaryGeneratorAction.hh  SWNSRunAction.hh
code_gui/macs/: scoring_prob.mac
code_gui/src/: SWNSActionInitialization.cc  SWNSDetectorConstruction.cc  SWNSPrimaryGeneratorAction.cc  SWNSRunAction.cc
demo_case/: Cf252Spectrum.txt  Mytest1.root  SWNS  SWNSgeom.txt  particles.mac  physiclists.txt  scoring_prob.mac
examples/: Gd_n.txt  Sr90.txt  g4geom_SD.txt  run.mac  run1.mac  run2.mac  scoring_prob.mac
